--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,8 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url('./assets/background.jpeg');
-  background-size: contain;
+  background: url('./assets/Krossroads.png');
 }
 
 code {
@@ -66,6 +66,13 @@ code {
   }
   .player-2 {
     width: 50%;
+  }
+  .ChooseButton {
+    bottom: 0;
+    top: unset;
+  }
+  .player-2, .player-1 {
+    top: 40px;
   }
 }
 
