--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
-
+/*--blue: #069de6;*/
+/*--indigo: #6610f2;*/
+/*--purple: #6f42c1;*/
+/*--pink: #e83e8c;*/
+/*--red: #fa2a18;*/
+/*--orange: #fda90f;*/
+/*--yellow: #fda90f;*/
+/*--green: #28a745;*/
+/*--teal: #20c997;*/
+/*--cyan: #17a2b8;*/
+/*--white: #fff;*/
+/*--gray: #6c757d;*/
+/*--gray-dark: #343a40;*/
+/*--primary: #069de6;*/
+/*--secondary: #6c757d;*/
+/*--success: #28a745;*/
+/*--info: #17a2b8;*/
+/*--warning: #fda90f;*/
+/*--danger: #fa2a18;*/
+/*--light: #f8f9fa;*/
+/*--dark: #343a40;*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,20 +40,21 @@ code {
   align-items: center;
   margin-top: 100px;
 }
-.player-1 {
+.player-1, .player-2 {
   position: fixed;
-  left: 0;
   top: 130px;
   width: 15%;
   color: white;
-
+  padding: 10px;
+  border-radius: 5px;
+}
+.player-1 {
+  left: 0;
+  background: #0000ff40;
 }
 .player-2 {
-  position: fixed;
   right: 0;
-  top: 130px;
-  width: 15%;
-  color: white;
+  background: #ff000036;
 }
 
 .SelectedPlayer {
@@ -51,11 +72,41 @@ code {
   left: 0;
   top: 0;
   z-index: 2;
+  border: 0;
+  background: linear-gradient(to right, #000, #fda90f, #000);
 }
-.ChooseButton:hover {
-  background-color: #C1950E;
+.ChooseButton.loading {
+  cursor: not-allowed;
+  background: #828282;
+}
+.ChooseButton:not(.loading):hover {
+  background: linear-gradient(to right, #000, #fff5e2, #000);
 }
 
+.ChooseButton::before {
+  content:"";
+  background: linear-gradient(to right, #000, #fff, #000);
+  display: block;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+.ChooseButton:not(.loading):hover::before {
+  background: linear-gradient(to right, #000, #fda90f, #000);
+}
+.ChooseButton::after {
+  content:"";
+  background: linear-gradient(to right, #000, #fff, #000);
+  display: block;
+  height: 3px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+.ChooseButton:not(.loading):hover::after {
+  background: linear-gradient(to right, #000, #fda90f, #000);
+}
 @media only screen and (max-width: 800px) {
   .RandomScreen {
     margin-top: 600px;
