--- a/src/index.css
+++ b/src/index.css
@@ -37,13 +37,11 @@ code {
 .RandomScreen {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /*align-items: center;*/
   margin-top: 100px;
 }
 .player-1, .player-2 {
-  position: fixed;
-  top: 130px;
-  width: 15%;
+  width: 23%;
   color: white;
   padding: 10px 0;
   border-radius: 5px;
@@ -74,13 +72,11 @@ code {
   z-index: 2;
   border: 0;
   background: linear-gradient(to right, #000, #fda90f, #000);
+  color: #000;
 }
 .ChooseButton.loading {
   cursor: not-allowed;
   background: #828282;
-}
-.ChooseButton:not(.loading):hover {
-  background: linear-gradient(to right, #000, #fff5e2, #000);
 }
 
 .ChooseButton::before {
@@ -92,9 +88,7 @@ code {
   position: absolute;
   top: 0;
 }
-.ChooseButton:not(.loading):hover::before {
-  background: linear-gradient(to right, #000, #fda90f, #000);
-}
+
 .ChooseButton::after {
   content:"";
   background: linear-gradient(to right, #000, #fff, #000);
@@ -104,19 +98,33 @@ code {
   position: absolute;
   bottom: 0;
 }
-.ChooseButton:not(.loading):hover::after {
-  background: linear-gradient(to right, #000, #fda90f, #000);
+
+
+@media(hover: hover) and (pointer: fine) {
+  .ChooseButton:not(.loading):hover {
+    background: linear-gradient(to right, #000, #fff5e2, #000);
+  }
+  .ChooseButton:not(.loading):hover::before {
+    background: linear-gradient(to right, #000, #fda90f, #000);
+  }
+  .ChooseButton:not(.loading):hover::after {
+    background: linear-gradient(to right, #000, #fda90f, #000);
+  }
 }
+
+
 @media only screen and (max-width: 800px) {
   .RandomScreen {
-    margin-top: 600px;
+    margin-top: 0;
+    flex-wrap: wrap;
   }
   .player-1 {
     width: 50%;
-
+    order: 1;
   }
   .player-2 {
     width: 50%;
+    order: 2;
   }
   .ChooseButton {
     bottom: 0;
@@ -125,5 +133,22 @@ code {
   .player-2, .player-1 {
     top: 40px;
   }
+  .PlayersList {
+    order: 3;
+    margin-bottom: 100px;
+  }
+}
+
+.buttons-list-wrapper {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button-move:not(:first-child) {
+  margin-left: 5px;
+}
+.button-move img {
+  max-width: 20px
 }
 
