--- a/src/index.css
+++ b/src/index.css
@@ -134,10 +134,48 @@ code {
     top: 40px;
   }
   .PlayersList {
+
+  }
+  .PlayersListWrapper {
     order: 3;
     margin-bottom: 100px;
   }
 }
+.players-history {
+  display: none;
+  color: white;
+  flex-direction: column-reverse;
+  padding: 30px 0;
+}
+
+.players-history-item {
+  font-size: 18px;
+  line-height: 24px;
+  padding: 5px;
+  font-weight: bold;
+}
+.players-history-item:last-child {
+  font-size: 26px;
+  color: #ad4141 !important;
+  line-height: 30px;
+  margin-bottom: 10px;
+  background: white !important;
+  padding: 10px;
+  font-weight: bold;
+}
+.players-history-item:nth-child(odd) {
+  background: #00000073;
+}
+.players-history-item:nth-child(even) {
+  background: #ffffff40;
+  color: black;
+}
+
+.players-history.open {
+  display: flex;
+}
+
+
 
 .buttons-list-wrapper {
   margin-bottom: 5px;
@@ -152,3 +190,9 @@ code {
   max-width: 20px
 }
 
+.players-reseted {
+  color: yellow;
+  font-size: 36px;
+  background: black;
+  padding: 20px;
+}
