--- a/src/index.css
+++ b/src/index.css
@@ -197,3 +197,36 @@ code {
   background: black;
   padding: 20px;
 }
+
+.room-link a {
+    color: black;
+    font-size: 26px;
+    text-decoration: none;
+}
+
+.room-link a:hover {
+    color: white;
+}
+
+.add-new-room-button {
+    height: 40px;
+    width: 150px;
+    margin: 20px 0;
+}
+
+.add-new-room-input {
+    width: 200px;
+    height: 40px;
+    font-size: 30px;
+}
+
+.add-new-room-actions-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.error-message-validation {
+    font-size: 32px;
+    color: red;
+}
